--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Composition</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="welcome_logo">Welcome logo</string>
+    <string name="number_composition">Состав числа</string>
+    <string name="btn_understand">Понятно</string>
+    <string name="game_descriptions">Правила игры: перед вами будет три фигуры, две снизу и одна
+        сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была
+        равна числу в верхней фигуре, для этого нужно вставить недостающее число.
+        Пример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит
+        на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
 </resources>
