--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
         равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\n
         Пример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит
         на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
+    <string name="choose_level">Выберите уровень:</string>
+    <string name="text_level_test">Тестовый</string>
+    <string name="text_level_easy">Легкий</string>
+    <string name="text_level_normal">Средний</string>
+    <string name="text_level_hard">Тяжелый</string>
 </resources>
