--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,15 @@
     <string name="btn_understand">Понятно</string>
     <string name="game_descriptions">Правила игры: перед вами будет три фигуры, две снизу и одна
         сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была
-        равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\n
-        Пример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит
+        равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример:
+        в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит
         на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
     <string name="choose_level">Выберите уровень:</string>
     <string name="text_level_test">Тестовый</string>
     <string name="text_level_easy">Легкий</string>
     <string name="text_level_normal">Средний</string>
     <string name="text_level_hard">Тяжелый</string>
+    <string name="start_point_timer">00:00</string>
+    <string name="question_mark">Т?</string>
+    <string name="progress_answers">Минимальных ответов:</string>
 </resources>
